--- a/HealthyEats/gradle/libs.versions.toml
+++ b/HealthyEats/gradle/libs.versions.toml
@@ -3,6 +3,9 @@ agp = "8.6.0"
 chartscomposelibrary = "1.0.0"
 coilCompose = "<latest_version>"
 coilComposeVersion = "2.4.0"
+firebaseBom = "33.6.0"
+gson = "2.10.1"
+jakewhartonRetrofit2KotlinCoroutinesAdapterVersion = "0.9.2"
 kotlin = "1.9.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -16,12 +19,23 @@ fragmentKtx = "1.8.5"
 material3 = "1.1.2"
 mpandroidchartVersion = "v3.1.0"
 navigationCompose = "2.8.4"
+retrofitVersion = "2.9.0"
+squareupLoggingInterceptorVersion = "4.9.3"
+squareupOkhttpVersion = "4.11.0"
+squareupConverterGsonVersion = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 chartscomposelibrary = { module = "com.github.tvbarthel:ChartsComposeLibrary", version.ref = "chartscomposelibrary" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil-compose-v240 = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
+com-squareup-retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGsonVersion" }
+com-squareup-okhttp3-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "squareupOkhttpVersion" }
+com-squareup-okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupLoggingInterceptorVersion" }
+com-jakewharton-retrofit-retrofit2-kotlin-coroutines-adapter2 = { module = "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter", version.ref = "jakewhartonRetrofit2KotlinCoroutinesAdapterVersion" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-auth = { module = "com.google.firebase:firebase-auth" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -40,6 +54,7 @@ androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", ve
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 philjay-mpandroidchart = { module = "com.github.PhilJay:MPAndroidChart", version.ref = "mpandroidchartVersion" }
+retrofit2-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 tehras-charts = { module = "com.github.tehras:charts" }
 
 [plugins]
