--- a/HealthyEats/gradle/libs.versions.toml
+++ b/HealthyEats/gradle/libs.versions.toml
@@ -3,6 +3,8 @@ agp = "8.6.0"
 chartscomposelibrary = "1.0.0"
 coilCompose = "<latest_version>"
 coilComposeVersion = "2.4.0"
+datastore = "1.0.0"
+datastoreCore = "1.0.0"
 firebaseBom = "33.6.0"
 gson = "2.10.1"
 jakewhartonRetrofit2KotlinCoroutinesAdapterVersion = "0.9.2"
@@ -11,6 +13,7 @@ coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxCoroutinesPlayServices = "1.7.3"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.04.01"
@@ -26,6 +29,8 @@ squareupConverterGsonVersion = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-core = { module = "androidx.datastore:datastore-core", version.ref = "datastoreCore" }
+androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 chartscomposelibrary = { module = "com.github.tvbarthel:ChartsComposeLibrary", version.ref = "chartscomposelibrary" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 coil-compose-v240 = { module = "io.coil-kt:coil-compose", version.ref = "coilComposeVersion" }
@@ -49,6 +54,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+kotlinx-coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "kotlinxCoroutinesPlayServices" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
